@@ -55,6 +55,8 @@
 * app-vim/rails-4.4                           x86 SCHEDULED: <2011-10-06 Thu>
 * dev-python/argh-0.14.1                    amd64 SCHEDULED: <2011-10-06 Thu>
 * dev-python/argh-0.14.1                      x86 SCHEDULED: <2011-10-06 Thu>
+* dev-python/github2-0.5.2                  amd64 SCHEDULED: <2011-10-06 Thu>
+* dev-python/github2-0.5.2                    x86 SCHEDULED: <2011-10-06 Thu>
 * dev-util/ditz-0.5-r1                      amd64 SCHEDULED: <2011-11-03 Thu>
 * dev-util/ditz-0.5-r1                        x86 SCHEDULED: <2011-11-03 Thu>
 * dev-python/rstctl-0.4                     amd64 SCHEDULED: <2011-11-06 Sun>
